--- a/static/style.css
+++ b/static/style.css
@@ -63,6 +63,62 @@ body {
 }
 
 
+.hourButton {
+	-moz-box-shadow:inset 0 1px 0 0 #f7c5c0;
+	-webkit-box-shadow:inset 0 1px 0 0 #f7c5c0;
+	box-shadow:inset 0 1px 0 0 #f7c5c0;
+	background-color:#566573;
+	-moz-border-radius:6px;
+	-webkit-border-radius:6px;
+	border-radius:6px;
+	border:1px solid #566573;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:15px;
+	font-weight:bold;
+	padding:6px 7px;
+	text-decoration:none;
+	text-shadow:0 1px 0 #b23e35;
+}
+.hourButton:hover {
+	background-color:#17202A;
+}
+.hourButton:active {
+	position:relative;
+	top:1px;
+}
+
+
+.smallButton {
+	-moz-box-shadow:inset 0 1px 0 0 #f7c5c0;
+	-webkit-box-shadow:inset 0 1px 0 0 #f7c5c0;
+	box-shadow:inset 0 1px 0 0 #f7c5c0;
+	background-color: #2e86c1;
+	-moz-border-radius:6px;
+	-webkit-border-radius:6px;
+	border-radius:6px;
+	border:1px solid #2e86c1;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:15px;
+	font-weight:bold;
+	padding:6px 7px;
+	text-decoration:none;
+	text-shadow:0 1px 0 #b23e35;
+}
+.smallButton:hover {
+	background-color:  #154360;
+}
+.smallButton:active {
+	position:relative;
+	top:1px;
+}
+
+
 .restButton {
 	-moz-box-shadow:inset 0 1px 0 0 #fce2c1;
 	-webkit-box-shadow:inset 0 1px 0 0 #fce2c1;
